# linux-mini-agent

./: .env.sample  .gitignore  CLAUDE.md  README.md  install-services.sh  install.sh  justfile
.claude/agents/: listen-drive-and-steer-system-prompt.md
.claude/commands/: install-agent-sandbox.md  install-engineer-devbox.md  listen-drive-and-steer-user-prompt.md  prime.md  walmart-cart.md
.claude/skills/drive/: SKILL.md
.claude/skills/steer/: SKILL.md
.claude/skills/walmart/: SKILL.md  preferences.json
apps/drive/commands/: fanout.py  session.py
apps/drive/modules/: proc.py  sentinel.py  tmux.py
apps/listen/: cron_manager.py  crons.yaml  dashboard.html  db.py  jobs.db  jobs.db-shm  jobs.db-wal  login.html  main.py  pyproject.toml  worker.py
apps/steer/: README.md  main.py  pyproject.toml
apps/steer/commands/: click_cmd.py  clipboard_cmd.py  find_cmd.py  scroll_cmd.py  see.py  type_cmd.py
apps/steer/modules/: accessibility.py  app_control.py  clipboard_control.py  element_store.py  keyboard.py  mouse_control.py  ocr.py  screen_capture.py  tools.py  window_control.py
apps/telegram/: bot.py  main.py
scripts/: nightly-commit.sh
systemd/: linux-agent-listen.service  linux-agent-telegram.service
